add search products handler
